# pgnudge

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.wal2json  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: init-replication-hba.sh
docs/: README.md  design-history.md  managed-platforms.md  parsing-reference.md  parsing-walkthrough.md  parsing.md  physical-wal.md  research-notifications.md  temporary-slots.md
examples/: minimal.py  raw_minimal.py
scripts/: dbio.py
src/pgnudge/: __init__.py  __main__.py  core.py  doctor.py  engine.py  errors.py  proto.py  raw.py  wal.py  xlog.py
src/pgwake/: __init__.py  core.py  engine.py  proto.py  wal.py
tests/: conftest.py  test_bench_parser.py  test_cli.py  test_core.py  test_doctor_unit.py  test_engine.py  test_errors.py  test_proto.py  test_raw.py  test_raw_unit.py  test_wal.py  test_wal_unit.py  test_xlog.py  wire.py
